--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,2 +1,5 @@
 Prefix: "<blue>[SkyWars]<reset>"
 Command-Only-For-Players: "<red>Only players can execute this command."
+Game-Created: "<green>New <hover:show_text:'<gameid>'><underlined>game</underlined></hover> has been created."
+Entity-Not-Found: "<red><entity> <yellow><name></yellow> not found."
+Entity-Updated: "<green><entity> has been updated."
