--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -3,3 +3,7 @@ Command-Only-For-Players: "<red>Only players can execute this command."
 Game-Created: "<green>New <hover:show_text:'<gameid>'><underlined>game</underlined></hover> has been created."
 Entity-Not-Found: "<red><entity> <yellow><name></yellow> not found."
 Entity-Updated: "<green><entity> has been updated."
+Game-Full: "<red>This game is already full."
+Game-Not-Joinable: "<red>You cannot join this game at the moment."
+Game-Join-Message: "<blue><player> joined the game (<players>/<maxplayers>)"
+Game-Leave-Message: "<blue><player> left the game (<players>/<maxplayers>)"
